# myQuant

./: .coverage  .env.example  .gitignore  Agents.md  CLAUDE.md  README.md  daily_config.py  daily_runner.py  download_cn_all.sh  fix_path_imports.py  fix_tokens.py  install_codex_skill.sh  pyproject.toml  quant-self-improve.skill  requirements.txt  run_cn_full_analysis.sh  run_us_aggressive_analysis.py  run_web.sh  self_improve_report.json  vercel.json
.claude/: launch.json
.github/workflows/: ci-cd.yml
docs/: README.md  system_audit_inventory.json
docs/architecture/: 2026-04-04-bayesian-a-share-dag.md  entrypoints_and_versioning.md  research_pipeline_and_protocols.md
docs/modules/: macro_risk_reference.md  module_map.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
quant_investor/: __init__.py  __main__.py  _sourceless.py  advanced_risk_metrics.py  agent_orchestrator.py  agent_protocol.py  alpha158.py  alpha_mining.py  branch_contracts.py  branch_debate_engine.py  config.py  contracts.py  corporate_doc_ingest.py  corporate_doc_store.py  credential_utils.py  data_manager.py  debate_scheduler.py  debate_templates.py  enhanced_data_layer.py  ensemble_judge.py  factor_analyzer.py  factor_neutralizer.py  fetch_cn_index_components.py  fetch_complete_us_universe.py  fetch_us_index_components.py  financial_analysis.py  forecast_snapshot_store.py  fundamental_branch.py  fundamental_components.py  intelligence.py  kronos_predictor.py  llm_gateway.py  llm_provider_priority.py  llm_transport.py  macro_terminal_tushare.py  model_roles.py  news_analysis.py  portfolio_backtest.py  reencode_csv_for_excel.py  regime_detector.py  (+10 more)
quant_investor/_vendor/: __init__.py  chronos_loader.py
quant_investor/agents/: __init__.py  agent_contracts.py  base.py  fundamental_agent.py  ic_coordinator.py  intelligence_agent.py  kline_agent.py  llm_client.py  macro_agent.py  master_agent.py  narrator_agent.py  orchestrator.py  portfolio_constructor.py  prompts.py  quant_agent.py  risk_guard.py  stock_reviewers.py  subagent.py
quant_investor/bayesian/: __init__.py  calibration.py  likelihood.py  posterior.py  prior.py  types.py
quant_investor/cli/: __init__.py  main.py
quant_investor/contracts/: __init__.py  global_context.py  portfolio.py  selection.py  symbol_research.py
quant_investor/funnel/: __init__.py  candidate_filter.py  deterministic_funnel.py
quant_investor/global_context/: __init__.py  builder.py
quant_investor/kline_backends/: __init__.py  base.py  chronos_adapter.py  evaluator.py  heuristic.py  hybrid_adapter.py  hybrid_engine.py  kronos_adapter.py
quant_investor/learning/: __init__.py  learning_orchestrator.py  memory_indexer.py  memory_promoter.py  post_trade_reflector.py  pre_trade_recall.py  trade_case_store.py
quant_investor/market/: __init__.py  analyze.py  backtest.py  cn_freshness.py  cn_resolver.py  cn_symbol_status.py  config.py  dag_executor.py  data_quality.py  data_snapshot.py  download.py  download_cn.py  download_us.py  orchestration.py  provider_health.py  run_pipeline.py  shared_csv_reader.py
quant_investor/monitoring/: __init__.py  cn_aggressive_portfolio_tracker.py  intelligence_monitor.py  us_simulated_portfolio_tracker.py
quant_investor/orchestration/: __init__.py  three_layer.py
quant_investor/pipeline/: __init__.py  current.py  legacy_v8_pipeline.py  mainline.py  parallel_research_pipeline.py  quant_investor_v10.py  quant_investor_v8.py  quant_investor_v9.py  result_builder.py  result_types.py
quant_investor/portfolio/: __init__.py  decision.py
quant_investor/reporting/: __init__.py  action_consistency_guard.py  conclusion_renderer.py  diagnostics_bucketizer.py  executive_summary.py  run_artifacts.py
quant_investor/selection/: __init__.py  prefilter.py
quant_investor/symbol_research/: __init__.py  builder.py
scripts/: __init__.py  workspace_cleanup.py  workspace_layout.py
scripts/unified/: FINAL_SUMMARY.md  MACRO_RISK_GUIDE.md  __init__.py  advanced_risk_metrics.py  alpha158.py  alpha_mining.py  async_processor.py  backtest_engine.py  batch_data_fetcher.py  batch_data_pipeline.py  cache_manager.py  cn_full_market_analysis.py  cn_full_market_batch_analysis.py  config.py  data_manager.py  decision_layer.py  download_all.py  download_continuous.sh  download_full_cn_market.py  download_full_us_market.py  enhanced_data_layer.py  enhanced_model_layer.py  ensemble_judge.py  exceptions.py  factor_analyzer.py  fetch_cn_index_components.py  financial_analysis.py  full_report.md  hyperparameter_tuner.py  intelligence_layer.py  investment_report.py  kronos_predictor.py  llm_rate_limiter.py  logger.py  logging_config.py  macro_terminal_tushare.py  market_impact.py  microservices.py  mlflow_tracker.py  multi_llm_ensemble.py  (+36 more)
scripts/v2.7/: __init__.py  persistent_cn_data_manager.py  persistent_data_manager.py  persistent_us_data_manager.py  test_persistent_storage.py
scripts/v5.0/: __init__.py
scripts/v6.0/: V6_architecture_design.md  test_results.md  test_v6_quick.py
scripts/workspace/: __init__.py  cleanup.py  layout.py
skill/: SKILL.md  SKILL_V2.5.md  SKILL_V3.0.md
skill/agents/: openai.yaml
skill/myquant-backend-ops/: SKILL.md
skill/references/: cn_macro_risk_terminal.md  macro_risk_terminal.md  qlib_integration.md
skill/templates/: report.md.template
tests/: conftest.py
tests/integration/: _helpers.py  test_forecast_snapshot_cache_integration.py  test_full_market_end_to_end.py  test_learning_loop_no_live_mutation.py  test_mainline_integration.py  test_reporting_protocol_consistency.py  test_review_layer_timeout_budget.py  test_shortlist_end_to_end.py  test_single_symbol_end_to_end.py
tests/unit/: test_agent_orchestrator.py  test_agent_protocol.py  test_backtest.py  test_batch_report_uses_narrator.py  test_bayesian_posterior.py  test_bayesian_prior.py  test_candidate_review_after_funnel.py  test_cn_aggressive_portfolio_tracker.py  test_cn_freshness_behavior.py  test_data_layer.py  (+86 more)
web/: api.py  app.py  config.py  main.py  workspace_app.py
(+169 files in other folders)
